user add is_active field
