# backend-api/swagger/v1/swagger.yaml
@@ -405,7 +405,7 @@ paths:
                   type: string
                 identification_number:
                   type: integer
-                account_balance:
+                balance:
                   type: number
                 pin:
                   type: integer
@@ -414,7 +414,7 @@ paths:
               required:
               - name
               - identification_number
-              - account_balance
+              - balance
               - pin
               - face_image_url
     get:
@@ -449,7 +449,7 @@ paths:
                     type: string
                   identification_number:
                     type: integer
-                  account_balance:
+                  balance:
                     type: number
                   pin:
                     type: integer
@@ -482,7 +482,7 @@ paths:
                   type: string
                 identification_number:
                   type: integer
-                account_balance:
+                balance:
                   type: number
                 pin:
                   type: integer
